--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
-    
+    <div id="root" class="container-fluid"></div>
   </body>
 </html>
